--- a/sort.tex
+++ b/sort.tex
@@ -1,18 +1,9 @@
 \section{The Sort Operator}
 \label{sort}
 
-Sorting is among the most commonly used operations in database systems,
-forming the core of operators such as \emph{merge-join}, \emph{order-by} and
-some flavors of \emph{group-by}.  The process of sorting is quite
-write-intensive since the commonly used in-memory sorting algorithms,
-such as \textit{quicksort}, involve considerable data movement. In the
+The quicksort algorithm is the commonly used sorting algorithm in database systems. In the
 single pivot quicksort algorithm with $n$ elements, the average number
-of swaps is of the order of $0.3nln(n)$~\cite{swaps}.  There are other
-algorithms such as \emph{selection sort} which involve much less data
-movement, but they incur \emph{quadratic} time complexity in the number
-of elements to be sorted, and are therefore unsuitable for large datasets. Algorithms like \emph {merge sort}, on the other hand, require additional space for the merge step which is undesirable given the limited space availability in PCM.
-
-The quicksort algorithm divides the input array into two partitions in each partitioning step. If the initial array is much larger than the DRAM size, it would
+of swaps is of the order of $0.3nln(n)$~\cite{swaps}. If the initial array is much larger than the DRAM size, it would
 entail evictions from the DRAM during the swapping process of
 partitioning. These evictions might lead to PCM writes if the evicted
 DRAM lines are \textit{dirty}, which is likely since elements are being
@@ -21,12 +12,12 @@ DRAM, partitioning them in turn will again cause DRAM evictions and
 consequent writes. Clearly, this trend of writes will continue in the
 recursion tree until the partition sizes become small enough to fit within
 DRAM. Thereafter, there would be no further evictions during swapping
-and the entire subsequent sorting process would finish within the DRAM.
+and the remaining sorting process would finish within the DRAM.
 
-From the above discussion, it is clear that it would be desirable for a sorting algorithm to be in-place, converge fast to partition sizes within DRAM size with less amount of swaps, and yet be reasonably fast. We pick an alternate algorithm - flashsort \cite{flashsort} - which has these properties. Specifically, flashsort can potentially form DRAM sized partitions in a \emph{single} partitioning step with at most $N_R$ swaps. The sorting is done in-place with a time complexity of $O(N_Rlog_2N_R)$ with constant extra space\footnote{The time complexity can be brought down to $O(N_R)$ with $O(N_R)$ extra space}. The flashsort algorithm proceeds in three phrases: \emph{Classification Phase}, \emph{Permutation Phase} and \emph{Short-range Ordering Phase}. The classification phase divides the input data into $p$ partitions where $p$ is given as input. Given an element with value $v$, $Partition(v) = 1 + \lfloor \frac{(p-1)(v- v_{min})}{v_{max}-v_{min}} \rfloor$; $v_{min}$ and $v_{max}$ being the smallest and the largest values in the array, respectively. It then counts the number of elements in each such partition to get the boundary information. The permutation phase moves the elements to their respective partitions. The individual partitions are then finally sorted in the Short-range Ordering Phase to get the overall sorted array.
+From the above discussion, it is clear that it would be desirable for a sorting algorithm to be in-place, converge fast to partition sizes within DRAM size with less amount of swaps. We pick an alternate algorithm - flashsort \cite{flashsort} - which has these properties. Specifically, flashsort can potentially form DRAM sized partitions in a \emph{single} partitioning step with at most $N_R$ swaps. The sorting is done in-place with a time complexity of $O(N_Rlog_2N_R)$ with constant extra space\footnote{The time complexity can be brought down to $O(N_R)$ with $O(N_R)$ extra space}. The flashsort algorithm proceeds in three phrases: \emph{Classification Phase}, \emph{Permutation Phase} and \emph{Short-range Ordering Phase}. The classification phase divides the input data into $p$ partitions where $p$ is given as input. Given an element with value $v$, $Partition(v) = 1 + \lfloor \frac{(p-1)(v- v_{min})}{v_{max}-v_{min}} \rfloor$; $v_{min}$ and $v_{max}$ being the smallest and the largest values in the array, respectively. It then counts the number of elements in each such partition to get the boundary information. The permutation phase moves the elements to their respective partitions. The individual partitions are then finally sorted in the Short-range Ordering Phase to get the overall sorted array.
 
 We choose the number of partitions $p$ to be $\lceil c \times \frac{N_R L_R}{D} \rceil$, where $c \geq 1$ is a design
-parameter. This is because if we were to go with $p$ to be exactly $\frac{N_R L_R}{D}$, some partitions might turn out to be larger than the DRAM size if the data is not uniformly distributed. In our experience, setting $c = 2$ worked well in practice.
+parameter, to cater to the possibility that some partitions might turn out to be larger than the DRAM size if the data is not uniformly distributed. In our experience, setting $c = 2$ worked well in practice.
 
 %\input{read_phase_algo}
 
@@ -47,8 +38,8 @@ partition is within the DRAM size, the Short-range Ordering phase (for each part
 will finish within DRAM and there will be another $N_R L_R$ writes upon
 eventual eviction of sorted partitions to PCM. 
 
-Thus, in the average case of uniform data distribution, the writes incurred by this algorithm is estimated by
+Thus, for the case of uniform data distribution, the writes incurred by this algorithm is estimated by
 \begin{equation}
-\label{eq:mpivot}
+\label{eq:sort}
   W_{sort} = 2N_RL_R
 \end{equation}
