--- a/discussion.tex
+++ b/discussion.tex
@@ -12,18 +12,17 @@ such plans, the database query optimizer needs to incorporate PCM
 awareness in both the operator cost models and the plan enumeration
 algorithms.
 
-The current optimizers choose plans using just a latency based costing mechanism. We introduce a new metric of \emph{write cost} in the operator cost model, representing the incurred writes for a plan, using the estimators described in Sections~\ref{sort} to \ref{gby}. The existing latency based cost models of the operators are also revised to account for the additional latency incurred during writes. We henceforth refer to the write cost and the latency cost of a plan as WC and LC, respectively. 
+The current optimizers choose plans using just a latency based costing mechanism. We revise these models to account for the additional latency incurred during writes. Additionally, we introduce a new metric of \emph{write cost} in the operator cost model, representing the incurred writes for a plan, using the estimators described in Sections~\ref{sort} to \ref{gby}. We henceforth refer to the latency cost and the write cost of a plan as LC and WC, respectively. 
 
-We redesign the query optimizer to now allow a user defined parameter which we call the \emph{slack} denoted by $\lambda$. The slack represents the maximum relative slowdown, compared to the LC-optimal query plan, that is acceptable to the user in lieu of getting better write performance. That is, if the LC of the LC-optimal execution plan $P_o$ is $c_o$ and the LC of an alternate plan $P_i$ is $c_i$, the user is willing to accept $P_i$ as the final execution plan if $c_i \le (1+\lambda c_o)$. The $P_i$ with the least WC satisfying this equation is considered the WC-optimal plan.
+We redesign the query optimizer to now allow a user defined parameter which we call the \emph{slack} denoted by $\lambda$. The slack represents the maximum relative slowdown, compared to the LC-optimal query plan, that is acceptable to the user in lieu of getting better write performance. That is, if the LC of the LC-optimal execution plan $P_o$ is $c_o$ and the LC of an alternate plan $P_i$ is $c_i$, the user is willing to accept $P_i$ as the final execution plan if $c_i \le (1+\lambda) c_o$. The $P_i$ with the least WC satisfying this equation is considered the WC-optimal plan.
 
-During the plan enumeration process in the planning phase, the native optimizer propagates the LC-optimal and interesting order plans through the internal nodes of the dynamic programming lattice. This can lead to pruning of potential WC-optimal plans. Propagating the \emph{entire} list of sub-plans at each internal node, on the other hand, can end up with an exponential search space at the root node. We use a heuristic propagation mechanism at each internal node using an algorithmic parameter \emph{local threshold} $\lambda_l$ ($\ge\lambda$). Let  $P_i^'$ and $P_o^'$ be a sub-plan and the LC-optimal sub-plan at a node, respectively, with $c_i^'$ and $c_o^'$ being their corresponding LC values. Now, along with the LC-optimal and interesting order sub-plans, we also propagate $P_i^'$ with the least WC that satisfies $c_i^{'} \le (1+\lambda_l c_o^{'})$. We observed that keeping $\lambda_l = \lambda$ gave reasonably good results in this regard.
+With the new metric in place, we need to revise the plan enumeration process during the planning phase. This is because the native optimizer propagates just the LC-optimal and interesting order plans through the internal nodes of the dynamic programming lattice which can lead to pruning of potential WC-optimal plans. Propagating the \emph{entire} list of sub-plans at each internal node, on the other hand, can end up with an exponential search space at the root node. We use a heuristic propagation mechanism at each internal node using an algorithmic parameter \emph{local threshold} $\lambda_l$ ($\ge\lambda$). Let  $P_i^'$ and $P_o^'$ be a sub-plan and the LC-optimal sub-plan at a node, respectively, with $c_i^'$ and $c_o^'$ being their corresponding LC values. Now, along with the LC-optimal and interesting order sub-plans, we also propagate $P_i^'$ with the \emph{least} WC that satisfies $c_i^{'} \le (1+\lambda_l) c_o^{'}$. We observed that keeping $\lambda_l = \lambda$ gave reasonably good results in this regard.
 
-In the light of these modifications, let
+In light of these modifications, let
 us revisit Query Q13, for which the default plan was shown in
-Figure~\ref{fig:plan_trees}(a). With the $\lambda$ value of 0 indicating no slack being allowed, we got a new execution plan wherein the
+Figure~\ref{fig:plan_trees}(a). With just the revised latency costs ($\lambda$ = 0), we now got a new execution plan wherein the
 merge left join between the \textit{customer} and \textit{orders}
-tables is replaced by a hash left join. This indicates the immediate impact of revised latency costs after including the additional write latency.
-
+tables is replaced by a hash left join.
 The relative performance of
 these two alternatives with regard to PCM Writes and Cycles, are shown
 in Figures~\ref{fig:perf_comp}(a) and (b), respectively. We observe
