--- a/groupby.tex
+++ b/groupby.tex
@@ -32,8 +32,9 @@ a page-based hash table organization, and a reduced hash value size,
 to reduce the writes to PCM.
 
 \textbf{PCM write analysis}: From the above discussion, it is easy to see
-that the total writes incurred for the PCM-conscious is given by
+that the total writes incurred for the PCM-conscious hash based group-by is given by
 \begin{equation}
+\label{eq:gb_ht}
 \begin{split}
 W_{gb\_ht} = G \times size_{entry} + 
 N_R \times size_{agg\_field} + G \times size_g
@@ -60,8 +61,8 @@ pointers to perform aggregation on the sorted tuples.
 which were incurred in the flashsort scheme, are
 now replaced by $2N_R \times P$ since pointers are used during
 both the partitioning and sorting phases. Thus, the total writes for this
-algorithm would be:
+algorithm for uniformly distributed data would be:
 \begin{equation}
-\label{eq:gby_ptr_mpivot}
+\label{eq:gb_sort}
 W_{gb\_sort} = 2N_R \times P + G \times size_g
 \end{equation}
