--- a/join.tex
+++ b/join.tex
@@ -42,9 +42,10 @@ to each bucket turn out to be less than this value. Otherwise, we would
 have to incur the penalty (in terms of latency) of reading the actual join
 column values from PCM due to the possibility of false positives.
 
-\textbf{PCM write analysis}: We ignore the writes incurred while initializing each hash table bucket since they are negligible in comparison to inserting the actual entries. $J \times size_j$ represents the writes due to join tuples. Assuming there are $E_{page}$ entries per page, there would now be one pointer per $E_{page}$ entries. Additionally, for each insertion, a bit write would be incurred due to the bitmap update. In such a case, the writes would be 
-$$W_{hj} = N_R \times (size_{entry} +  \frac{P}{E_{page}} + \frac{1}{8} ) + J \times size_{j}$$\\
-Since in practice both  $\dfrac{P}{E_{page}}$ and $\dfrac{1}{8}$ are small as compared to $size_{entry}$, 
-\begin{equation}\label{eq:ht_bmp}
+\textbf{PCM write analysis}: We ignore the writes incurred while initializing each hash table bucket since they are negligible in comparison to inserting the actual entries. Assuming there are $E_{page}$ entries per page, there would now be one pointer per $E_{page}$ entries. Additionally, for each insertion, a bit write would be incurred due to the bitmap update. The join tuples would also incur writes which is given by $J \times size_j$. Thus, the total writes for hash join would be
+$$W_{hj} = N_R \times (size_{entry} +  \frac{P}{E_{page}} + \frac{1}{8} ) + J \times size_{j}$$
+Since in practice both  $\frac{P}{E_{page}}$ and $\frac{1}{8}$ are small as compared to $size_{entry}$, 
+\vspace{-0.1in}
+\begin{equation}\label{eq:hj}
  W_{hj} \approx N_R \times size_{entry} + J \times size_{j} 
 \end{equation} 
